--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<title>Chantier en Bretagne</title>
 
 	<meta name="title" content="Chantier en Bretagne">
-	<meta name="description" content="Chantier en autoconstruction bois, paille, toiture végétalisée">
+	<meta name="description" content="Chantier en autoconstruction bois, paille, pierre, toiture végétalisée">
 	<meta name="author" content="Violenn, Brook, Nicolas, Denis.">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
@@ -29,13 +29,19 @@
 
 <body>
 		<h1><strong>Chantier en Bretagne</strong></h1>
-		<p>	Maison et site internet en construction</p>
-		<p>
-			<a href="mailto:violenn.simon@gmail.com,denis.fongue@gmail.com">Nous contacter</a>
-		</p>
+		<p><em>Maison et site internet en construction</em></p>
+
+		<h2>— Calendrier</h2>
+
+
+		<h2>— Quotidien</h2>
 		<p>
 			<a href="http://www.instagram.com/chantier.bzh">Suivre le chantier en photo</a>
 		</p>
+
+		<h2>— À propos</h2>
+		<p> Rénovation d'une longère bretonne. Autoconstruction en bois et paille (GREB), bardage en bois brûlé et toit prairie. </p>
+		<p><a href="mailto:violenn.simon@gmail.com,denis.fongue@gmail.com">Nous contacter</a></p>
 	</body>
 
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-114120005-1"></script>
