--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
 	<style type="text/css">
-		body {font: 20px/35px "Helvetica Neue", Arial, sans-serif; margin: 40px 40px; color: #333}
-		h1 {font-size: 20px; font-weight: normal; margin:0; margin-bottom:40px}
-		p {margin:0 0 20px 0}
+		body {font: 20px/35px "Helvetica Neue", Arial, sans-serif; margin: 40px 40px; color: #333; max-width: 600px}
+		h1, h2, h3 {font-size: 20px; font-weight: normal; margin:0;}
+		h2 {margin-top:40px;}
+		p, ul {margin:0 0 20px 0}
 		strong {font-weight: normal;}
 		em {color:#CCC; font-style: normal}
 		a {text-decoration: none; border-bottom: 1px solid #CCC; color:#333; padding-bottom: 3px;}
