--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
 	<style type="text/css">
-		body {font: 20px/35px "Helvetica Neue", Arial, sans-serif; margin: 40px; color: #333; max-width: 600px}
+		body {font: 20px/35px "Helvetica Neue", Arial, sans-serif; margin: 40px 40px 200px; color: #333;}
 		h1, h2, h3 {font-size: 20px; font-weight: normal; margin:0;}
-		h2 {margin-top: 40px}
+		h2 {margin-top: 80px}
 		h2:before {	content : "— ";}
 
-			@media all and (min-width : 1200px) {
+			@media all and (min-width : 1280px) {
 
 				body {
 					max-width: 1600px;
@@ -39,17 +39,17 @@
 					margin-top: 40px;
 				}
 
-				h2 + * > p {
-					max-width: 600px;
-				}
-
 			}
 
-		p {margin : 0 0 20px 0}
+		p {margin : 0 0 20px 0; max-width: 560px;}
 		strong {font-weight: normal;}
 		em {color:#CCC; font-style: normal}
 		a {text-decoration: none; border-bottom: 1px solid #CCC; color:#333; padding-bottom: 3px;}
 		a:hover {color: #0000FF; border-bottom: 2px solid currentColor}
+
+		.content {
+			overflow: hidden;
+		}
 
 		.calendar {
 			display: flex;
@@ -72,7 +72,7 @@
 				}
 			}
 
-			@media all and (min-width : 1200px) {
+			@media all and (min-width : 1280px) {
 
 				.calendar > li {
 					margin-top: 0;
@@ -93,6 +93,7 @@
 		<h1><strong>Chantier en Bretagne</strong></h1>
 		<p><em>Maison et site internet en construction</em></p>
 
+		<main class="content">
 		<h2>Calendrier 2018</h2>
 		<ul class="calendar">
 			<li>
@@ -182,6 +183,8 @@
 				<a href="mailto:violenn.simon@gmail.com,denis.fongue@gmail.com">Nous contacter</a>
 			</p>
 		</div>
+
+	</main>
 	</body>
 
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-114120005-1"></script>
