--- a/index.html
+++ b/index.html
@@ -100,35 +100,41 @@
 				<h3>Février</h3>
 				<ul>
 					<li>Raccordement du mobilhome</li>
+					<li>Clôture</li>
 					<li>Aménagement du chantier</li>
-					<li>Cloturage</li>
 					<li>Dépose des toitures</li>
 				</ul>
 			</li>
 			<li>
 				<h3>Mars</h3>
 				<ul>
-					<li>Terrassement, démolition</li>
+					<li>Démolition</li>
+					<li>Terrassement</li>
+					<li>Fondations</li>
 					<li>Maçonnerie</li>
 				</ul>
 			</li>
 			<li>
 				<h3>Avril</h3>
 				<ul>
+					<li>Démolition</li>
 					<li>Drainage</li>
-					<li>Maçonnerie</li>
+					<li>Maçonnerie, taille de pierres</li>
 				</ul>
 			</li>
 			<li>
 				<h3>Mai</h3>
 				<ul>
-					<li>Maçonnerie</li>
+					<li>Maçonnerie, taille de pierres</li>
+					<li>Linteau acier, soudure</li>
+					<li>Coffrage, arase (béton)</li>
 				</ul>
 			</li>
 			<li>
 				<h3>Juin</h3>
 				<ul>
-					<li>Ossatures des murs (GREB)</li>
+					<li>Ossature bois (GREB)</li>
+					<li>Pare-pluie sur l'ensemble des murs</li>
 				</ul>
 			</li>
 			<li>
@@ -136,36 +142,47 @@
 				<ul>
 					<li>Charpente</li>
 					<li>Récolte de la paille</li>
-					<li>Toiture</li>
 					<li>Isolation du toit en paille</li>
 				</ul>
 			</li>
 			<li>
 				<h3>Aout</h3>
 				<ul>
-					<li>Toiture</li>
+					<li>Couverture du toit (EPDM)</li>
 					<li>Isolation des murs en paille</li>
+					<li>Coulage du mortier (GREB)</li>
 				</ul>
 			</li>
 			<li>
 				<h3>Septembre</h3>
 				<ul>
 					<li>Isolation des murs en paille</li>
-					<li>Dalle</li>
-					<li>Pose des fenêtres</li>
+					<li>Coulage du mortier (GREB)</li>
+					<li>Dépose du plancher</li>
+					<li>Hérisson, isolation (granulat de verre)</li>
+					<li>Mise en place des menuiseries</li>
 				</ul>
 			</li>
 			<li>
 				<h3>Octobre</h3>
-				<p>…</p>
+				<ul>
+					<li>Plancher d'étage</li>
+					<li>Bardage (bois brûlé)</li>
+				</ul>
 			</li>
 			<li>
 				<h3>Novembre</h3>
-				<p>…</p>
+				<ul>
+					<li>Second œuvre</li>
+					<li>…</li>
+				</ul>
 			</li>
 			<li>
 				<h3>Décembre</h3>
-				<p>…</p>
+				<ul>
+					<li>Second œuvre</li>
+					<li>…</li>
+				</ul>
 			</li>
 		</ul>
 
