--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 
 
 			}
+		h3 {text-transform: uppercase;}
 
 		p {margin : 0 0 20px 0; max-width: 560px;}
 		strong {font-weight: normal;}
@@ -127,10 +128,11 @@
 		</div>
 
 		<main class="content">
+
 		<h2>Calendrier 2018</h2>
 		<ul class="calendar">
 			<li>
-				<h3>Février</h3>
+				<h3>Fév</h3>
 				<ul>
 					<li>Raccordement du mobilhome</li>
 					<li>Clôture</li>
@@ -139,7 +141,7 @@
 				</ul>
 			</li>
 			<li>
-				<h3>Mars</h3>
+				<h3>Mar</h3>
 				<ul>
 					<li>Démolition</li>
 					<li>Terrassement</li>
@@ -148,7 +150,7 @@
 				</ul>
 			</li>
 			<li>
-				<h3>Avril</h3>
+				<h3>Avr</h3>
 				<ul>
 					<li>Démolition</li>
 					<li>Drainage</li>
@@ -171,7 +173,7 @@
 				</ul>
 			</li>
 			<li>
-				<h3>Juillet</h3>
+				<h3>Juil</h3>
 				<ul>
 					<li>Charpente</li>
 					<li>Récolte de la paille</li>
@@ -187,7 +189,7 @@
 				</ul>
 			</li>
 			<li>
-				<h3>Septembre</h3>
+				<h3>Sept</h3>
 				<ul>
 					<li>Isolation des murs en paille</li>
 					<li>Coulage du mortier (GREB)</li>
@@ -197,21 +199,21 @@
 				</ul>
 			</li>
 			<li>
-				<h3>Octobre</h3>
+				<h3>Oct</h3>
 				<ul>
 					<li>Plancher d'étage</li>
 					<li>Bardage (bois brûlé)</li>
 				</ul>
 			</li>
 			<li>
-				<h3>Novembre</h3>
+				<h3>Nov</h3>
 				<ul>
 					<li>Second œuvre</li>
 					<li>…</li>
 				</ul>
 			</li>
 			<li>
-				<h3>Décembre</h3>
+				<h3>Déc</h3>
 				<ul>
 					<li>Second œuvre</li>
 					<li>…</li>
